Added put method on swagger
